--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,13 @@
     <string name="cache_size">缓存大小</string>
     <string name="hack">骇入！</string>
     <string name="back">Back</string>
+    <string name="cancel">Cancel</string>
+
     <string name="language">语言</string>
     <string name="chinese_simplified">简体中文</string>
     <string name="chinese_traditional">繁体中文</string>
     <string name="english">English</string>
+
     <string name="check_for_updates">检查更新</string>
     <string name="profile_photo">头像</string>
     <string name="nickname">昵称</string>
